# atlas-clean-code-maerz-2026

./: README.md
NimGame/: CMakeLists.txt  main.cpp
NimGame/atlas/game/: AbstractGame.h  IGame.h
NimGame/atlas/game/nimgame/: NimGame.h
NimGame/atlas/game/nimgame/player/: AbstractNimGamePlayer.h  ComputerPlayer.h  HumanPlayer.h
NimGame/atlas/game/player/: AbstractPlayer.h  IPlayer.h
NimGame/atlas/gameclient/: Client.h
NimGame/atlas/io/: ConsoleWriter.h  Writer.h
ProperitaererThreadPool/: CMakeLists.txt  main.cpp
ProperitaererThreadPool/.claude/: settings.local.json
ProperitaererThreadPool/threadpool/: thread_pool.hpp
ThreadDemo/: CMakeLists.txt  main.cpp
VectorFiller/: AufgabeTeil1.md  CMakeLists.txt  main.cpp
VectorFiller/atlas/client/: IClient.h
VectorFiller/atlas/client/impl/: ClientImpl.h
VectorFiller/atlas/container/: AbstractVectorFactory.h  IVectorFactory.h
VectorFiller/atlas/container/impl/decorator/: VectorFactoryBenchmarkDecorator.h  VectorFactoryLoggerDecorator.h  VectorFactorySecureDecorator.h
VectorFiller/atlas/container/impl/sequential/: VectorFactorySequentialImpl.h
VectorFiller/atlas/generator/: IGenerator.h  IIntGenerator.h
VectorFiller/atlas/generator/impl/random/: MersenneTwisterNumberGenerator.h
VectorFiller/atlas/time/: IStopwatch.h
VectorFiller/atlas/time/impl/: StopwatchImpl.h
VectorFiller/src/atlas/client/: IClient.h
VectorFiller/src/atlas/client/impl/: ClientImpl.h
VectorFiller/src/atlas/container/: AbstractVectorFactory.h  IVectorFactory.h
VectorFiller/src/atlas/container/impl/builder/: VectorFactoryBuilder.h
VectorFiller/src/atlas/container/impl/decorator/: VectorFactoryBenchmarkDecorator.h  VectorFactoryLoggerDecorator.h  VectorFactorySecureDecorator.h
VectorFiller/src/atlas/container/impl/parallel/: VectorFactoryAutoImpl.h  VectorFactoryParallelImpl.h  VectorFactoryThreadpoolImpl.h  VectorFactoryThreadpoolLoopImpl.h
VectorFiller/src/atlas/container/impl/sequential/: VectorFactorySequentialImpl.h
VectorFiller/src/atlas/generator/: IGenerator.h  IGeneratorFactory.h
VectorFiller/src/atlas/generator/impl/generic/: GenericGeneratorImpl.h
VectorFiller/src/atlas/generator/impl/random/: MersenneTwisterNumberGenerator.h  MersenneTwisterNumberGeneratorFactory.h
VectorFiller/src/atlas/threadpool/: thread_pool.hpp
VectorFiller/src/atlas/time/: IStopwatch.h
VectorFiller/src/atlas/time/impl/: StopwatchImpl.h
VectorFiller/tests/: CMakeLists.txt  test_builder.cpp  test_factories.cpp  test_generators.cpp  test_stopwatch.cpp
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-gui/src/de/limago/: Fenster.java
